# BP

./: .gitignore  Agents.md  logs-edszumowski-bp-main-bpcsd_app-app.py-2026-03-14T13_30_32.558Z.txt  pyproject.toml
.codex/: config.toml
Meetings/: README.md
PolicyManual/: README.md  download_policies.py
PolicyManual/tests/: test_download_policies.py
PolicyManual/text/: 001_1110_School_District_and_Board_of_Education_Legal_Status_and_Authority.txt  002_1120_Board_of_Education_Qualifications_Numbers_and_Terms_of_Office.txt  003_1121_Ex_Officio_Student_Member_of_the_Board.txt  004_1210_Board_of_Education_Members_Nomination_and_Election.txt  005_1220_Reporting_of_Expenditures_and_Contributions.txt  006_1230_Resignation_and_Dismissal.txt  007_1310_Powers_and_Duties_of_the_Board.txt  008_1320_Nomination_and_Election_of_Board_Officers_and_Duties_of_the_President_and_Vice_President.txt  009_1330_Appointments_and_Designations_by_the_Board_of_Education.txt  010_1331_Duties_of_the_District_Clerk.txt  011_1332_Duties_of_the_School_District_Treasurer.txt  012_1333_Duties_of_the_Tax_Collector.txt  013_1334_Duties_of_the_External_Independent_Auditor.txt  014_1335_Appointment_and_Duties_of_the_Claims_Auditor.txt  015_1336_Duties_of_the_Extra-classroom_Activity_Fund_Central_Treasurer_and_Faculty_Auditor.txt  016_1337_Duties_of_the_School_Attorney.txt  021_1510R_Rules_of_Order.txt  (+253 more)
RenameDocs/: BP_Counsel_Review_Letter_Renaming.docx  Stephen_Tomlinson_JSHS_Renaming_Resolution.docx  ~WRL2887.tmp
bpcsd_app/: .gitignore  README.md  app.py  requirements.txt  start.sh
(+72 files in other folders)
