[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bpcsd-boarddocs-agent"
version = "0.1.0"
description = "Reusable BoardDocs downloader and summarizer for Broadalbin-Perth CSD board meetings"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "openpyxl>=3.1.0",
  "playwright>=1.44.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
boarddocs-agent = "boarddocs_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "tools/boarddocs_agent"}

[tool.setuptools.packages.find]
where = ["tools/boarddocs_agent"]
